fix table th wrap

--- a/app/webpacker/stylesheets/_typography.scss
+++ b/app/webpacker/stylesheets/_typography.scss
@@ -21,5 +21,6 @@
   th {
     color: var(--text-secondary-color);
     font-weight: bold;
+    white-space: nowrap;
   }
 }
